--- a/Backend/DGII.WebApi/Properties/launchSettings.json
+++ b/Backend/DGII.WebApi/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:23602",
+      "applicationUrl": "https://localhost:7051",
       "sslPort": 44373
     }
   },
